# Media_Scanner

./: CMakeLists.txt  README.md
include/: media_scanner.service
src/: README.md  main.cpp  media_scanner.conf  media_state.h  scanner.cpp  scanner.h  server.cpp  server.h
